--- a/Exercice4_30 Objet_class_saisie_formulaire_V1.html
+++ b/Exercice4_30 Objet_class_saisie_formulaire_V1.html
@@ -4,16 +4,33 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Exercice 3</title>
+    <title>Exercice 4</title>
 </head>
 
 <body>
 
-    <h1>Exercice 3 (20 Objet_class_V3.html)</h1>
+    <h1>Exercice 4 (30 Objet_class_saisie_formulaire_V1.html)</h1>
+
+
+    <form action="" method="post">
+        <label for="nom">Nom : </label>
+        <input id="nom" type="text" name="nom" placeholder="saisir un nom"> <br>
+
+        <label for="prenom">Prénom :</label>
+        <input id="prenom" type="text" name="prenom" placeholder="saisir un prénom"> <br>
+
+        <label for="age">Age :</label>
+        <input id="age" type="text" name="age" placeholder="saisir un age"> <br>
+
+        <label for="adresse">Adresse :</label>
+        <input id="adresse" type="text" name="adresse" placeholder="saisir une adresse"> <br>
+
+        <button id="btn" type="submit">Ajouter</button>
+    </form>
 
 
 
-
+    <!-- Début des scripts Javascript -->
     <script>
         class Stagiaire {
 
@@ -47,7 +64,7 @@
                 return this.#prenom;
             }
             set Prenom(value) {
-                alert(value);
+                // alert(value);
                 if (value.length < 4) {
                     alert("Erreur le prénom est trop court");
                     throw new Error("Erreur le prénom est trop court");
@@ -59,7 +76,7 @@
                 return this.#age;
             }
             set Age(value) {
-                alert(value);
+                // alert(value);
                 if ((value <= 0) && (value >= 150)) {
                     alert("Erreur l'age est inférieur à 0 ou supérieur à 150");
                     throw new Error("Erreur l'age est inférieur à 0 ou supérieur à 150");
@@ -77,7 +94,6 @@
 
             //methode
             Afficher = function () {
-
                 return ("Nom : " + this.Nom + " Prénom " + this.Prenom + " Age : " + this.Age + " ans " + " Adresse : " + this.Adresse);
             };
 
@@ -90,18 +106,38 @@
 
         window.addEventListener('load', (event) => {
 
-            try {
-                let stagiaire_1 = new Stagiaire("Doe", "John", 20, "Rue de la république");
-                let stagiaire_2 = new Stagiaire("Durand", "Paul", 40, "Rue du test");
-                alert(stagiaire_1.Afficher());
-                alert(stagiaire_2.Afficher());
-            }
-            catch (err) {
-                console.log("Erreur " + err);
-            }
-            finally {
-                console.log("finally");
-            }
+            let btn = document.getElementById("btn");
+
+            btn.addEventListener("click",
+                (e) => {
+                    let nom = document.getElementById("nom").value;
+                    let prenom = document.getElementById("prenom").value;
+                    let age = document.getElementById("age").value;
+                    let adresse = document.getElementById("adresse").value;
+
+                    let stagiaire = new Stagiaire(nom, prenom, age, adresse);
+
+
+                    console.log(stagiaire);
+                    stagiaire.Afficher();
+
+                    e.preventDefault();
+
+                }, false);
+
+
+            // try {
+            //     let stagiaire_1 = new Stagiaire("Doessss", "John", 20, "Rue de la république");
+            //     let stagiaire_2 = new Stagiaire("Durand", "Paul", 40, "Rue du test");
+            //     alert(stagiaire_1.Afficher());
+            //     alert(stagiaire_2.Afficher());
+            // }
+            // catch (err) {
+            //     console.log("Erreur " + err);
+            // }
+            // finally {
+            //     console.log("finally");
+            // }
 
         });
     </script>
