--- a/Exercice6_40 Livre_class_saisie_formulaire.html
+++ b/Exercice6_40 Livre_class_saisie_formulaire.html
@@ -40,7 +40,7 @@
     <script src="Livre.js"></script>
     <script>
         "use strict";
-        // alert("Créer");
+        alert("Créer");
         // Les Fonctions/Procédures
 
 
@@ -54,8 +54,18 @@
             let btn = document.getElementById("btn");
 
             btn.addEventListener("click", (e) => {
-                alert("CLICK");
-                e.preventDefault();
+
+                try {
+                    alert("CLICK");
+                    let livre_saisi = recup_saisi();
+                    listeLivre.push(livre_saisi);
+                    console.log(listeLivre);
+                    afficherListeLivre(listeLivre);
+                    e.preventDefault();
+                } catch (err) {
+                    alert("Erreur : " + err.message);
+                    e.preventDefault();
+                }
             }, false);
 
         });
